--- a/modules/ytp-assets-common/src/less/content.less
+++ b/modules/ytp-assets-common/src/less/content.less
@@ -6,6 +6,11 @@ body {
   background-size: cover;
   padding-top: 64px;
 }
+@media(max-width: @screen-lg) {
+  body {
+    padding-top: 52px;
+  }
+}
 
 a {
     color: @link-color;
